# Rustodo

./: .gitignore  Cargo.toml  README.md
migrations/: 20220621094606_init_db.sql  20220624153702_add_user_table.sql  20220624154002_add_user_table.sql
src/: auth.rs  db.rs  jwt.rs  main.rs  models.rs  routes.rs  server.rs
src/db/: mod.rs  sled_repo.rs  sqlite_repo.rs
