[package]
name = "rust_db_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version ="0.5.9", features = ["headers"] }
tokio = { version = "1.19.2", features = ["full"]}
tower = "0.4.13"
sled = "0.34.7"
uuid = { version = "1.1.2", features = ["serde", "v4", "fast-rng"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sqlx = { version = "0.6.0", features = ["sqlite", "runtime-tokio-native-tls", "uuid"] }
once_cell = "1.12.0"
headers = "0.3.7"
jsonwebtoken = "8.1.1"
bcrypt = "0.13.0"